// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TagButton /> with \`active\` prop matches with snapshot 1`] = `
.c0 {
  min-height: 2.5rem;
  min-width: 3.75rem;
  padding: 0 1.25rem;
  font-size: 0.75rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  border-radius: var(--border-radius-s);
  border-width: var(--border-width);
  border-style: solid;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  box-sizing: border-box;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.75rem;
  color: var(--color-grey-900,#222);
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appareance: none;
  -moz-appareance: none;
  appareance: none;
  cursor: pointer;
  background-color: var(--color-grey-000,#fff);
  border: var(--border);
  color: var(--color-grey-900,#222);
}

.c0:disabled {
  cursor: not-allowed;
}

.c0 >:nth-child(n) {
  margin-right: 0.625rem;
  text-align: left;
}

.c0:hover,
.c0:focus {
  border: var(--border-hover-primary);
  background-color: var(--color-grey-000,#fff);
  color: var(--color-grey-900,#222);
}

.c0:active {
  background-color: var(--color-grey-000,#fff);
  border: var(--border-active-primary);
  color: var(--color-grey-900,#222);
}

.c0.k-Buttons__tagButton--tiny {
  min-height: 1.875rem;
  min-width: 3.75rem;
  padding: 0 1.25rem;
  font-size: 0.75rem;
}

.c0.k-Buttons__tagButton--big {
  min-height: 3.125rem;
  min-width: 5rem;
  padding: 0 1.875rem;
  font-size: 0.875rem;
}

.c0.k-Buttons__tagButton--huge {
  min-height: 3.75rem;
  min-width: 5rem;
  padding: 0 1.875rem;
  font-size: 0.875rem;
}

.c0:disabled {
  cursor: not-allowed;
  border: var(--border-disabled);
  background-color: var(--color-grey-300,#eee);
  color: var(--color-grey-600,#949494);
}

.c0.k-Buttons__tagButton--active {
  background-color: var(--color-primary-100,#e8f7fe);
  border: var(--border-active-primary);
  color: var(--color-grey-900,#222);
}

.c0.k-Buttons__tagButton--active:hover,
.c0.k-Buttons__tagButton--active:focus,
.c0.k-Buttons__tagButton--active:active {
  border-color: var(--color-primary-700);
}

<button
  className="c0 k-Buttons__tagButton k-Buttons__tagButton--regular k-Buttons__tagButton--active"
  type="button"
>
  MyButton
</button>
`;

exports[`<TagButton /> with \`size="huge"\` prop matches with snapshot 1`] = `
.c0 {
  min-height: 2.5rem;
  min-width: 3.75rem;
  padding: 0 1.25rem;
  font-size: 0.75rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  border-radius: var(--border-radius-s);
  border-width: var(--border-width);
  border-style: solid;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  box-sizing: border-box;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.75rem;
  color: var(--color-grey-900,#222);
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appareance: none;
  -moz-appareance: none;
  appareance: none;
  cursor: pointer;
  background-color: var(--color-grey-000,#fff);
  border: var(--border);
  color: var(--color-grey-900,#222);
}

.c0:disabled {
  cursor: not-allowed;
}

.c0 >:nth-child(n) {
  margin-right: 0.625rem;
  text-align: left;
}

.c0:hover,
.c0:focus {
  border: var(--border-hover-primary);
  background-color: var(--color-grey-000,#fff);
  color: var(--color-grey-900,#222);
}

.c0:active {
  background-color: var(--color-grey-000,#fff);
  border: var(--border-active-primary);
  color: var(--color-grey-900,#222);
}

.c0.k-Buttons__tagButton--tiny {
  min-height: 1.875rem;
  min-width: 3.75rem;
  padding: 0 1.25rem;
  font-size: 0.75rem;
}

.c0.k-Buttons__tagButton--big {
  min-height: 3.125rem;
  min-width: 5rem;
  padding: 0 1.875rem;
  font-size: 0.875rem;
}

.c0.k-Buttons__tagButton--huge {
  min-height: 3.75rem;
  min-width: 5rem;
  padding: 0 1.875rem;
  font-size: 0.875rem;
}

.c0:disabled {
  cursor: not-allowed;
  border: var(--border-disabled);
  background-color: var(--color-grey-300,#eee);
  color: var(--color-grey-600,#949494);
}

.c0.k-Buttons__tagButton--active {
  background-color: var(--color-primary-100,#e8f7fe);
  border: var(--border-active-primary);
  color: var(--color-grey-900,#222);
}

.c0.k-Buttons__tagButton--active:hover,
.c0.k-Buttons__tagButton--active:focus,
.c0.k-Buttons__tagButton--active:active {
  border-color: var(--color-primary-700);
}

<button
  className="c0 k-Buttons__tagButton k-Buttons__tagButton--huge"
  type="button"
>
  MyButton
</button>
`;

exports[`<TagButton /> with text matches with snapshot 1`] = `
.c0 {
  min-height: 2.5rem;
  min-width: 3.75rem;
  padding: 0 1.25rem;
  font-size: 0.75rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  border-radius: var(--border-radius-s);
  border-width: var(--border-width);
  border-style: solid;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  box-sizing: border-box;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.75rem;
  color: var(--color-grey-900,#222);
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appareance: none;
  -moz-appareance: none;
  appareance: none;
  cursor: pointer;
  background-color: var(--color-grey-000,#fff);
  border: var(--border);
  color: var(--color-grey-900,#222);
}

.c0:disabled {
  cursor: not-allowed;
}

.c0 >:nth-child(n) {
  margin-right: 0.625rem;
  text-align: left;
}

.c0:hover,
.c0:focus {
  border: var(--border-hover-primary);
  background-color: var(--color-grey-000,#fff);
  color: var(--color-grey-900,#222);
}

.c0:active {
  background-color: var(--color-grey-000,#fff);
  border: var(--border-active-primary);
  color: var(--color-grey-900,#222);
}

.c0.k-Buttons__tagButton--tiny {
  min-height: 1.875rem;
  min-width: 3.75rem;
  padding: 0 1.25rem;
  font-size: 0.75rem;
}

.c0.k-Buttons__tagButton--big {
  min-height: 3.125rem;
  min-width: 5rem;
  padding: 0 1.875rem;
  font-size: 0.875rem;
}

.c0.k-Buttons__tagButton--huge {
  min-height: 3.75rem;
  min-width: 5rem;
  padding: 0 1.875rem;
  font-size: 0.875rem;
}

.c0:disabled {
  cursor: not-allowed;
  border: var(--border-disabled);
  background-color: var(--color-grey-300,#eee);
  color: var(--color-grey-600,#949494);
}

.c0.k-Buttons__tagButton--active {
  background-color: var(--color-primary-100,#e8f7fe);
  border: var(--border-active-primary);
  color: var(--color-grey-900,#222);
}

.c0.k-Buttons__tagButton--active:hover,
.c0.k-Buttons__tagButton--active:focus,
.c0.k-Buttons__tagButton--active:active {
  border-color: var(--color-primary-700);
}

<button
  className="c0 k-Buttons__tagButton k-Buttons__tagButton--regular"
  type="button"
>
  MyButton
</button>
`;
